fixed properties predicates host

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,10 +7,10 @@ spring:
         - id: iliopoulos
           uri: http://127.0.0.1:8080
           predicates:
-            - Host=iliopoulos.xyz
+            - Host=iliopoulos-nikolas.xyz
             - Path=*
         - id: seasidehouseinneamakri
           uri: http://127.0.0.1:8081
           predicates:
-            - Host=seasidehouseinneamakri
+            - Host=seasidehouseinneamakri.com
             - Path=*
