--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,10 @@ spring:
     gateway:
       routes:
         - id: iliopoulos
-          uri: http://127.0.0.1:8080
+          uri: http://localhost:8080
           predicates:
             - Host=iliopoulos-nikolas.xyz
         - id: seasidehouseinneamakri
-          uri: http://127.0.0.1:8081
+          uri: http://localhost:8081
           predicates:
             - Host=seasidehouseinneamakri.com
