started ssh on ec2

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  build-docker-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,3 +20,14 @@ jobs:
         run: docker build . --file Dockerfile --tag nikolasil/ec2-gateway-service:latest
       - name: Push Docker image to Docker Hub
         run: docker push nikolasil/ec2-gateway-service:latest
+  deploy-to-ec2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Connect to ec2 instance
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: 44.200.151.12
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script: |
+            ls
