--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-docker-image:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,14 +20,13 @@ jobs:
         run: docker build . --file Dockerfile --tag nikolasil/ec2-gateway-service:latest
       - name: Push Docker image to Docker Hub
         run: docker push nikolasil/ec2-gateway-service:latest
-  deploy-to-ec2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Connect to ec2 instance
+      - name: Connect to ec2 instance and deploy
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: 44.200.151.12
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            ls
+            docker stop gatewayService || true
+            docker rm gatewayService || true
+            docker run -d --name gatewayService -p 80:80 nikolasil/ec2-gateway-service:latest
