--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag nikolasil/ec2-gateway-service:latest
+        run: docker build . --file Dockerfile --platform linux/amd64,linux/arm64 --tag nikolasil/ec2-gateway-service:latest
       - name: Push Docker image to Docker Hub
         run: docker push nikolasil/ec2-gateway-service:latest
       - name: Connect to ec2 instance and deploy
@@ -29,4 +29,5 @@ jobs:
           script: |
             sudo docker stop gatewayService || true
             sudo docker rm gatewayService || true
+            sudo docker pull nikolasil/ec2-gateway-service || true
             sudo docker run -d --name gatewayService -p 80:80 nikolasil/ec2-gateway-service:latest
