--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,6 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - # Setup hardware emulator using QEMU
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+        # Setup Docker Builderx for multi-arch images
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
