--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build the Docker image
-        run: docker buildx build . --file Dockerfile --platform linux/amd64,linux/arm64 --tag nikolasil/ec2-gateway-service:latest
+        run: docker buildx build --platform linux/arm64/v8 . --file Dockerfile --tag nikolasil/ec2-gateway-service:latest
       - name: Push Docker image to Docker Hub
         run: docker push nikolasil/ec2-gateway-service:latest
       - name: Connect to ec2 instance and deploy
