--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -13,4 +13,7 @@ jobs:
       - name: Print Secret
         env:
           MY_SECRET: ${{ secrets.EC2_PRIVATE_KEY }}
-        run: echo "The secret is $MY_SECRET"
+        run: |
+          echo "$MY_SECRET" > secret.txt
+          # Use the file securely
+          cat secret.txt
