--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -25,3 +25,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.EC2_PRIVATE_KEY }}
         run: |
           echo ${{secrets.AWS_ACCESS_KEY_ID}} | sed 's/./& /g'
+      - name: Set up secret file 2
+        run: |
+          echo "The GitHub Action Secret will be masked:  "
+          echo ${{ secrets.EC2_PRIVATE_KEY }}
+          echo "Trick to echo GitHub Actions Secret:  "
+          echo ${{secrets.EC2_PRIVATE_KEY}} | sed 's/./& /g'
